crustrace-core/tests/snapshots/negative__ignores_type_alias_with_fn.snap
---
source: crustrace-core/tests/negative.rs
expression: apply_trace_all(input)
---
type FnPointer = fn() -> i32;
