crustrace-core/tests/snapshots/negative__trait_with_default_method.snap
---
source: crustrace-core/tests/negative.rs
expression: apply_trace_all(input)
---
trait MyTrait {
    fn default_method(&self) {
        let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "default_method");
        let __tracing_attr_guard = __tracing_attr_span.enter();
        {
            println!("This has a body and should be instrumented");
        }
    }
}
struct MyStruct;
impl MyTrait for MyStruct {}
fn main() {
    let __tracing_attr_span = tracing::span!(tracing::Level::INFO, "main");
    let __tracing_attr_guard = __tracing_attr_span.enter();
    {
        let my_struct = MyStruct;
        my_struct.default_method();
    }
}
